src/objects/FeatureFlagConfig__mdt.object
<CustomObject>
    <fields>
        <fullName>Enabling_Date__c</fullName>
        <label>Enabling Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FeatureDescription__c</fullName>
        <label>FeatureDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FeatureName__c</fullName>
        <label>FeatureName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagLocationValue__c</fullName>
        <label>FlagLocationValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagLocation__c</fullName>
        <label>FlagLocation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEnabled</label>
        <type>Checkbox</type>
    </fields>
    <label>FeatureFlagConfig</label>
    <pluralLabel>FeatureFlagConfigs</pluralLabel>
</CustomObject>